[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assest/art/VM symbols logo.png" type="Texture" id=5]
[ext_resource path="res://Assest/art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://Assest/art/House In a Forest Loop.ogg" type="AudioStream" id=7]
[ext_resource path="res://Sale.tscn" type="PackedScene" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
Mob = ExtResource( 4 )
Sale = ExtResource( 8 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 720.0
color = Color( 0.341176, 0.321569, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VM symbols logo" type="Sprite" parent="Background"]
position = Vector2( 240, 159 )
scale = Vector2( 0.650709, 0.650709 )
texture = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( -76, 75 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.75

[node name="SaleTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 488 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="ThemeSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="point" from="Player" to="." method="tag_captured"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="SaleTimer" to="." method="_on_SaleTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
